--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,23 @@
-body {
+:root {
+  --bg-color: #232323;
+  --font-color: #ffff;
+  --first-color: #6C5CF0;
+}
+
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  color: var(--font-color);
+  background-color: var(--bg-color);
 }
 
 code {
