--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -1,4 +1,5 @@
 header {
+    width: 100%;
     background-color: var(--bg-color);
     box-shadow: 0 0 8px var(--first-color);
     padding: 1.2% 0;
