--- a/src/component/Header/Wallet/ConnectWallet/ConnectWallet.css
+++ b/src/component/Header/Wallet/ConnectWallet/ConnectWallet.css
@@ -10,19 +10,42 @@
     align-items: center;
 }
 
+
 .select-wallet-container {
-    width: 620px;
+    width: 650px;
     background-color: black;
     margin: auto;
     border-radius: 10px;
     padding: 1.5%;
+    animation: modalAni .75s ease-in-out 1 alternate;
+}
+
+@keyframes modalAni {
+    0% {
+        transform: translate(0, 550px);
+    }
+}
+
+.close-select-wallet-container {
+    width: 650px;
+    background-color: black;
+    margin: auto;
+    border-radius: 10px;
+    padding: 1.5%;
+    animation: closeModalAni .8s ease-in-out 1;
+}
+
+@keyframes closeModalAni {
+    100% {
+        transform: translate(0, 550px);
+    }
 }
 
 .select-wallet-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 2%;
+    margin-bottom: 15px;
 }
 
 .select-wallet-header h2 {
@@ -31,7 +54,10 @@
 
 .select-wallet-header svg {
     cursor: pointer;
-    opacity: .7;
+    background-color: rgba(139, 139, 139, 0.315);
+    box-sizing: initial;
+    padding: 5px;
+    border-radius: 50%;
 }
 
 .select-wallet-flex {
@@ -41,12 +67,13 @@
     align-items: center;
 }
 
-.wallets{
-    width: 50%;
+.wallets {
+    width: 40%;
+    height: 250px;
 }
 
 .wallets h3 {
-    text-align: left;
+    text-align: right;
     font-size: 14px;
     margin-bottom: 20px;
     opacity: .7;
@@ -57,7 +84,7 @@
 }
 
 .wallet-items {
-    width: 85%;
+    width: 95%;
     padding: 3px 0;
     margin-right: auto;
     border-radius: 12px;
@@ -82,6 +109,34 @@
 }
 
 .wallets-information {
-    width: 50%;
-    border: 1px solid white;
+    width: 60%;
+    height: 250px;
+}
+
+.wallets-information h3 {
+    text-align: center;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+.wallets-information-items {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    margin-bottom: 20px;
+}
+
+.wallets-information-items img {
+    width: 50px;
+    height: 50px;
+    border-radius: 7px;
+}
+
+.wallets-information-items div {
+    width: 260px;
+}
+
+.wallets-information-items div p {
+    font-size: 14px;
+    opacity: .7;
 }
