--- a/src/component/Header/Wallet/DisconnectWallet/DisconnectWallet.css
+++ b/src/component/Header/Wallet/DisconnectWallet/DisconnectWallet.css
@@ -24,12 +24,18 @@
     }
 }
 
-
 .close-disconnect-wallet-container {
-    width: 400px;
+    width: 370px;
     background-color: black;
     border-radius: 10px;
-    padding: 1.5%;
+    padding: 14px 10px;
+    animation: closeModalAni .8s ease-in-out 1;
+}
+
+@keyframes closeModalAni {
+    100% {
+        transform: translate(0, 550px);
+    }
 }
 
 .disconnect-wallet-flex svg {
@@ -45,7 +51,7 @@
 
 .disconnect-wallet-body {
     text-align: center;
-    margin-bottom: 8px;
+    margin-bottom: 12px;
 }
 
 #disconnect-wallet-picture {
