--- a/src/component/Header/Asset/Asset.css
+++ b/src/component/Header/Asset/Asset.css
@@ -16,7 +16,7 @@
 }
 
 .asset-logo {
-    width: 18%;
+    width: 40px;
     height: 35px;
     display: flex;
     justify-content: center;
@@ -24,6 +24,11 @@
     background-color: var(--first-color);
     border-top-right-radius: 7px;
     border-bottom-right-radius: 7px;
+}
+
+.asset-logo:hover {
+    transition: .3s;
+    opacity: .7;
 }
 
 .asset-logo svg {
