--- a/src/component/Header/Wallet/DisconnectWallet/DisconnectWallet.css
+++ b/src/component/Header/Wallet/DisconnectWallet/DisconnectWallet.css
@@ -89,6 +89,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    cursor: pointer;
 }
 
 .disconnect-wallet-footer button:hover {
