--- a/src/component/Swap/Swap.css
+++ b/src/component/Swap/Swap.css
@@ -13,3 +13,18 @@
     justify-content: space-between;
     align-items: center;
 }
+
+/* Responsive */
+
+@media screen and (max-width:1200px) {
+    .swap {
+        height: 100vh;
+    }
+    .swap-container{
+        width: 95%;
+    }
+
+    .swap-flex {
+        flex-direction: column;
+    }
+}
