--- a/src/component/Header/Asset/Asset.css
+++ b/src/component/Header/Asset/Asset.css
@@ -45,5 +45,10 @@
     font-size: 12.5px;
 }
 
-/* .asset-information span:first-child {
-} */
+/* Responsive */
+
+@media screen and (max-width:700px) {
+    .asset {
+        width: 210px;
+    }
+}
