--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -2,7 +2,7 @@ header {
     width: 100%;
     background-color: var(--bg-color);
     box-shadow: 0 0 8px var(--first-color);
-    padding: 1.2% 0;
+    padding: 15px 0;
 }
 
 .header-container {
@@ -32,4 +32,16 @@ header {
 .header-logo svg {
     color: var(--first-color);
     font-size: 27px;
+}
+
+/* Responsive */
+
+@media screen and (max-width:650px) {
+    .header-left-items {
+        width: 80%;
+    }
+
+    .header-right-items{
+        width: 20%;
+    }
 }
