--- a/src/component/Header/Nav/NavBar.css
+++ b/src/component/Header/Nav/NavBar.css
@@ -14,3 +14,11 @@ nav ul li:hover {
     transition: .6s;
     color: var(--first-color);
 }
+
+/*Responsive */ 
+
+@media screen and (max-width:650px){
+    nav {
+        display: none;
+    }
+}
