--- a/src/component/Header/Wallet/Wallet.css
+++ b/src/component/Header/Wallet/Wallet.css
@@ -30,3 +30,9 @@
     font-size: 13px;
     font-weight: bold;
 }
+
+@media screen and (max-width:700px) {
+    .wallet {
+        width: 210px;
+    }
+}
